--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.0
 cryptography==37.0.4
 defusedxml==0.7.1
 distlib==0.3.4
+dj-database-url==1.0.0
 Django==4.0.5
 django-allauth==0.51.0
 django-ckeditor==6.4.2
@@ -31,4 +32,5 @@ tzdata==2022.1
 urllib3==1.26.10
 virtualenv==20.14.1
 virtualenvwrapper-win==1.2.7
+whitenoise==6.2.0
 yarg==0.1.9
